<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="14dp"
    android:background="@drawable/back_login"
    tools:context="com.example.myapplication.LoginAcvtivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mainLogoImageView"
            android:src="@drawable/logo_new_3"
            android:contentDescription="@string/logo_discription"
            android:layout_margin="2dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailLoginEditText"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:hint="@string/user_email"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:imeOptions="actionDone" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutForPrograssBar"
        android:layout_below="@+id/linearLayout4"
        android:layout_centerHorizontal="true">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.FoldingCube"
            android:maxWidth="50dp"
            android:maxHeight="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:SpinKit_Color="#ffffff"
            android:visibility="invisible"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout5"
        android:layout_alignBottom="@+id/linearLayoutForPrograssBar"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordLoginEditText"
            android:hint="@string/user_password"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:imeOptions="actionDone" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/loginButton"
            android:background="@drawable/login_btn_white"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="New User ? - Register Now"
            android:id="@+id/registerNowTextView"
            android:layout_marginBottom="50dp"
            android:clickable="true"
            android:singleLine="true"
            android:layout_gravity="center"
            android:textColor="#000000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="I Forgot My Password"
            android:id="@+id/forgotPasswordTextView"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginBottom="29dp"
            android:textColor="#000000"/>
    </LinearLayout>

</RelativeLayout>

